--- a/BlockchainFlippa/package.json
+++ b/BlockchainFlippa/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "dotenv": "^16.0.0",
     "hardhat": "^2.9.1"
   },
