--- a/UniswapV2/package.json
+++ b/UniswapV2/package.json
@@ -21,6 +21,7 @@
     "@openzeppelin/contracts": "^4.6.0",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "bn.js": "^5.2.1"
+    "bn.js": "^5.2.1",
+    "dotenv": "^16.0.1"
   }
 }
