--- a/NFT-marketplace/package.json
+++ b/NFT-marketplace/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "chai": "^4.3.6",
+    "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.4",
     "ipfs-http-client": "^57.0.3",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
