--- a/Flash-loans/package.json
+++ b/Flash-loans/package.json
@@ -3,6 +3,9 @@
   "dependencies": {
     "@aave/core-v3": "^1.16.2",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@openzeppelin/contracts": "^4.7.3",
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "dotenv": "^16.0.2",
     "hardhat": "^2.11.2"
   }
