--- a/Flash-loans/package.json
+++ b/Flash-loans/package.json
@@ -1,12 +1,17 @@
 {
   "name": "hardhat-project",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.3",
+    "@types/mocha": "^10.0.0",
+    "hardhat": "^2.11.2",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0"
+  },
   "dependencies": {
     "@aave/core-v3": "^1.16.2",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/contracts": "^4.7.3",
-    "@uniswap/v2-core": "^1.0.1",
-    "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "dotenv": "^16.0.2",
-    "hardhat": "^2.11.2"
+    "dotenv": "^16.0.3"
   }
 }
